--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,9 +1,15 @@
 .header {
-  max-width: 820px;
+  max-width: 880px;
   margin: auto;
 }
 .header__image {
   margin: 45px 0 0;
   width: 173px;
   height: 33px;
+}
+
+.header__line {
+  margin: 41px 0 40px;
+  background-color: #545454;
+  height: 2px;
 }
