--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,3 +2,67 @@
   display: flex;
   justify-content: space-between;
 }
+.profile__info {
+  display: flex;
+}
+.profile__title {
+  margin: 21px 0 16px;
+  font-family: "inter";
+  font-size: 42px;
+  font-weight: 500;
+  line-height: 48px;
+}
+
+.profile__subtitle {
+  margin: 0;
+  font-family: "Inter";
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.78px;
+}
+
+.profile_image {
+  max-width: 120px;
+  height: 120px;
+  margin-right: 30px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.profile__edit-button {
+  background-color: black;
+  width: 24px;
+  height: 24px;
+  border-width: 2px;
+  border-style: solid;
+  border-color: white;
+  margin-left: 18px;
+  margin-top: 35px;
+  cursor: pointer;
+}
+
+.profile__edit-button:hover {
+  border-color: grey;
+  opacity: 50%;
+}
+
+.profile__add-button {
+  margin: 25px 0 0 105px;
+  width: 150px;
+  height: 50px;
+  background-color: black;
+  border-width: 2px;
+  border-style: solid;
+  border-color: white;
+  cursor: pointer;
+}
+
+.profile__add-button:hover {
+  border-color: grey;
+  opacity: 50%;
+}
+
+.profile__image-button {
+  width: 22px;
+  height: 22px;
+}
