--- a/pages/index.css
+++ b/pages/index.css
@@ -6,3 +6,6 @@
 @import url(../blocks/content.css);
 @import url(../blocks/element.css);
 @import url(../blocks/footer.css);
+@import url(../blocks/forms.css);
+@import url(../blocks/form.css);
+@import url(../blocks/overlay.css);
