nueva actualizacion de mi proyecto

--- a/blocks/body.css
+++ b/blocks/body.css
@@ -2,7 +2,7 @@
   position: relative;
 }
 
-.body__overlay {
+#body__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -10,4 +10,7 @@
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
+}
+.body__overlay {
+  display: none;
 }
