--- a/pages/index.css
+++ b/pages/index.css
@@ -8,4 +8,4 @@
 @import url(../blocks/footer.css);
 @import url(../blocks/forms.css);
 @import url(../blocks/form.css);
-@import url(../blocks/overlay.css);
+@import url(../blocks/body.css);
