nueva actulizacion de mi proyecto

--- a/blocks/body.css
+++ b/blocks/body.css
@@ -1,9 +1,10 @@
-.body {
+/*.body {
   position: relative;
-}
+}*/
 
-#body__overlay {
-  position: absolute;
+.body__overlay {
+  display: none;
+  position: fixed;
   top: 0;
   left: 0;
   height: 100%;
@@ -11,6 +12,6 @@
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
 }
-.body__overlay {
-  display: none;
+.overlay_show {
+  display: block;
 }
