--- a/blocks/forms.css
+++ b/blocks/forms.css
@@ -1,8 +1,5 @@
 .forms {
   display: none;
-}
-
-#forms {
   border-radius: 10px;
   background-color: white;
   width: 430px;
@@ -11,6 +8,10 @@
   top: 300px;
   left: 550px;
   z-index: 2;
+}
+
+.forms_show {
+  display: block;
 }
 
 .forms__title {
