--- a/blocks/element.css
+++ b/blocks/element.css
@@ -1,14 +1,5 @@
-.elements {
-  max-width: 880px;
-  margin-top: 50px;
-  gap: 21px 17px;
-  display: grid;
-  grid-template-columns: auto auto auto;
-}
-
 .element {
   max-width: 282px;
-  height: 361px;
   border-radius: 10px;
   background-color: white;
 }
@@ -21,7 +12,7 @@
 .element__title {
   text-align: center;
   color: black;
-  font-family: Inter;
+  font-family: "Inter";
   font-size: 24px;
   font-weight: 900;
   line-height: 29.05px;
@@ -35,4 +26,24 @@
 .element__like {
   margin-right: 15px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .element {
+    margin: auto;
+    max-width: 350px;
+  }
+
+  .element__image {
+    max-width: 350px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .element {
+    max-width: 282px;
+  }
+  .element__image {
+    max-width: 282px;
+  }
 }
