--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: black;
   color: #545454;
-  font-family: Inter;
+  font-family: "Inter";
   font-size: 18px;
   font-weight: 400;
   line-height: 21.78px;
