--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -19,7 +19,7 @@
 }
 @media screen and (max-width: 320px) {
   .footer__text {
-    width: 400px;
+    max-width: 400px;
     margin-left: 15px;
   }
 }
