--- a/pages/index.css
+++ b/pages/index.css
@@ -10,3 +10,4 @@
 @import url(../blocks/forms.css);
 @import url(../blocks/form.css);
 @import url(../blocks/body.css);
+@import url(../blocks/pupop.css);
