Actulizacopn de propiedas para los estilos se agrego redme

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -4,12 +4,18 @@
 }
 .profile__info {
   display: flex;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .profile__title {
   margin: 21px 0 16px;
   font-size: 42px;
   font-weight: 500;
   line-height: 48px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__subtitle {
