--- a/blocks/element.css
+++ b/blocks/element.css
@@ -15,6 +15,9 @@
   font-size: 24px;
   font-weight: 900;
   line-height: 29.05px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .element__text {
   margin: auto;
