nuevo popup para agregar cards

--- a/blocks/pupop.css
+++ b/blocks/pupop.css
@@ -8,7 +8,10 @@
   justify-content: center;
   align-items: center;
 }
-
+::backdrop {
+  background-color: black;
+  opacity: 0.75;
+}
 .popup__show {
   display: flex;
 }
