--- a/blocks/pupop.css
+++ b/blocks/pupop.css
@@ -29,13 +29,27 @@
 .popup_dialog {
   border: 0;
   background: transparent;
+  outline: none;
+  padding: 50px;
+}
+
+.popup__close-button {
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  border: none;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  background: black;
+  cursor: pointer;
+  outline: none;
+  border-radius: 5px;
 }
 
 .popup__img {
   max-width: 800px;
-  width: 90%;
   max-height: 800px;
-  height: 90%;
   object-fit: cover;
 }
 
