--- a/blocks/forms.css
+++ b/blocks/forms.css
@@ -1,13 +1,17 @@
 .forms {
   position: relative;
-  z-index: 2;
-  /*display: block;*/
   border-radius: 10px;
   background-color: white;
   width: 430px;
   height: 330px;
+  z-index: 1;
 }
 
+.dialog {
+  background: none;
+  border: none;
+  padding: 50px;
+}
 .forms__title {
   color: black;
   margin: 34px 0 0 36px;
