--- a/blocks/forms.css
+++ b/blocks/forms.css
@@ -62,6 +62,7 @@
 
 @media screen and (max-width: 320px) {
   .forms {
+    padding: 25px 0 0;
     background-color: white;
     width: 282px;
     height: 322px;
