--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -89,12 +89,21 @@
     margin: auto;
   }
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (max-width: 425px) {
   .profile {
     margin: auto;
     flex-direction: column;
     align-items: center;
   }
+
+  .profile__subtitle {
+    text-align: center;
+    padding-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 320px) {
   .profile__title {
     margin: 20px 0 14px;
     font-size: 22px;
