--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,6 +1,10 @@
 .page {
   max-width: 100%;
-  background-color: black;
+  background: linear-gradient(
+    109.6deg,
+    rgb(0, 0, 0) 11.2%,
+    rgb(247, 30, 30) 100.3%
+  );
   font-family: "inter", sans-serif;
   color: white;
 }
