--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,7 +1,7 @@
 .form__dialog {
   background: none;
   border: none;
-  padding: 45px;
+  padding: 52px;
 }
 
 .form__edit {
@@ -24,7 +24,7 @@
   border-bottom: 2px solid rgba(128, 128, 128, 0.708);
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 426px) {
   .form__input {
     margin-left: 22px;
     width: 238px;
@@ -32,5 +32,16 @@
 
   .form__dialog {
     padding: 25px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .form__dialog {
+    padding: 50px 0 0 0;
+  }
+
+  .form__input {
+    margin-left: 22px;
+    width: 238px;
   }
 }
