--- a/blocks/pupop.css
+++ b/blocks/pupop.css
@@ -9,8 +9,8 @@
   align-items: center;
 }
 ::backdrop {
-  background-color: black;
-  opacity: 0.75;
+  backdrop-filter: blur(10px);
+  background-color: rgba(0, 0, 0, 0.546);
 }
 .popup__show {
   display: flex;
@@ -27,6 +27,7 @@
 }
 .overlay_show {
   display: block;
+  backdrop-filter: blur(10px);
 }
 
 .popup_dialog {
@@ -56,11 +57,6 @@
   height: 100%;
   max-height: 800px;
   object-fit: cover;
-}
-
-::backdrop {
-  background-color: black;
-  opacity: 0.7;
 }
 
 .popup__description {
