--- a/blocks/form.css
+++ b/blocks/form.css
@@ -19,6 +19,32 @@
   text-align: left;
   margin: 30px 0 0 0;
 }
+.form__input:invalid {
+  border-color: red;
+}
+.form__input-error {
+  display: none;
+  font-size: 0.8em;
+}
+
+.form__input-error-invalid {
+  display: block;
+  color: red;
+}
+
+.form__input-error-card {
+  display: none;
+  font-size: 0.8em;
+}
+
+.form__input-error-card-invalid {
+  display: block;
+  color: red;
+}
+
+.form__input-error-card:invalid {
+  border-color: red;
+}
 
 .form__input[type="text"] {
   border-bottom: 2px solid rgba(128, 128, 128, 0.708);
