--- a/blocks/forms.css
+++ b/blocks/forms.css
@@ -6,7 +6,7 @@
   background-color: white;
   width: 430px;
   max-width: 100%;
-  height: 330px;
+  height: auto;
   padding: 35px;
 }
 
@@ -55,8 +55,8 @@
   padding: 0;
   border: none;
   position: absolute;
-  bottom: 340px;
-  left: 435px;
+  bottom: 320px;
+  left: 430px;
   background: black;
   cursor: pointer;
   z-index: 2;
