--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -4,6 +4,7 @@
   font-weight: 400;
   line-height: 21.78px;
   padding: 67px 0 60px;
+  background-color: black;
 }
 .footer__text {
   max-width: 880px;
