--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,10 +1,8 @@
 .page {
   max-width: 100%;
-  background: linear-gradient(
-    109.6deg,
-    rgb(0, 0, 0) 11.2%,
-    rgb(247, 30, 30) 100.3%
-  );
+  height: 100%;
+  min-height: 100vh;
+  background: black;
   font-family: "inter", sans-serif;
   color: white;
 }
