--- a/blocks/form.css
+++ b/blocks/form.css
@@ -19,6 +19,7 @@
   line-height: 16.94px;
   text-align: left;
   margin: 30px 0 0 0;
+  outline: none;
 }
 
 .form__input-error {
@@ -27,6 +28,10 @@
   font-size: 0.7em;
 }
 
+.form__input-error-span {
+  color: red;
+  font-size: 0.7em;
+}
 @media screen and (max-width: 426px) {
   .form__input {
     margin-left: 22px;
