--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,9 +1,11 @@
 .profile {
+  position: relative;
   display: flex;
   justify-content: space-between;
 }
 .profile__info-container {
   flex-grow: 1;
+  margin-left: 30px;
 }
 
 .profile__info {
@@ -29,12 +31,36 @@
   line-height: 21.78px;
 }
 
+.profile_avatar {
+  position: relative;
+  border: none;
+  background: none;
+}
+
+.profile_avatar:hover .profile__edit-avatar {
+  display: flex;
+}
+
+.profile_avatar:hover {
+  background-color: black;
+  opacity: 0.4;
+  cursor: pointer;
+}
 .profile_image {
   max-width: 120px;
   height: 120px;
-  margin-right: 30px;
   border-radius: 50%;
   object-fit: cover;
+}
+
+.profile__edit-avatar {
+  display: none;
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  scale: 1.5;
 }
 
 .profile__edit-button {
@@ -51,7 +77,7 @@
 }
 
 .profile__edit-button:hover {
-  opacity: 80%;
+  opacity: 90%;
 }
 .profile__edit-button:active {
   transform: scale(0.9);
